<resources>
    <string name="app_name">CatalogManager2</string>
    <string name="action_settings">Configuració</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_movements">MovementsActivity</string>
    <string name="action_movements">Veure Moviments</string>
    <string name="home">home</string>
    <string name="filtre_codi">Filtre Codi Producte i Dia</string>
    <string name="filtre_data">Filtre per Data</string>
    <string name="filtre_all">ALL</string>
    <string name="codi_article">Codi Article</string>
    <string name="descripcio">Descripció</string>
    <string name="PVP">PVP</string>
    <string name="stock">Stock</string>
    <string name="btnAccept">ACCEPTAR</string>
    <string name="btnCancel">CANCELAR</string>
    <string name="btnRemove">ELIMINAR</string>
    <string name="default_zero">0</string>
    <string name="code_upper">CODI:</string>
    <string name="descripcio_upper">DESCRIPCIÓ:</string>
    <string name="stock_upper">STOCK:</string>
    <string name="btn_stockin">Botó Entrada Stock</string>
    <string name="btnStockOut">Botó Stock Sortida</string>
    <string name="blank">blank</string>
    <string name="btnDelete">Botó Esborrar</string>
    <string name="codi_producte_upper">COD PRODUCTE:</string>
    <string name="dia_upper">DIA:</string>
    <string name="qty_upper">QUANTITAT:</string>
    <string name="filtre_descripcio">Filtrar per Descripció</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="title_activity_cities">CitiesActivity</string>
    <string name="title_activity_city_details">CityDetailsActivity</string>
</resources>
