<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="7dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtCodi"
            android:text="@string/codi_article" />

        <EditText
            android:id="@+id/edtCodi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtDescripcio"
            android:text="@string/descripcio" />

        <EditText
            android:id="@+id/edtDescripcio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtPVP"
            android:text="@string/PVP" />

        <EditText
            android:id="@+id/edtPVP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/edtStock"
            android:text="@string/stock" />

        <EditText
            android:id="@+id/edtStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:text="@string/default_zero"
            android:textAlignment="center" />


        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingTop="10dp"
            android:text="@string/btnAccept" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRemove" />
    </LinearLayout>
</RelativeLayout>

